# LearnOpenGL

./: CMakeLists.txt
include/: Camera.hpp  Console.h  FileSystem.hpp  Files.h  GLFW.h  GLFW.hpp  Glad.h  Mesh.hpp  Model.hpp  Shader.h  Shader.hpp  Texture.hpp  Vertex.h  Vertex.hpp
include/glad/: glad.h
lib/GLFW/: glfw3.lib
lib/glad/: glad.c
src/: Camera.cpp  Console.cpp  FileSystem.cpp  Files.cpp  GLFW.cpp  Glad.cpp  Mesh.cpp  Model.cpp  Shader.cpp  Texture.cpp  Vertex.cpp
src/1.GettingStarted/1.HelloWindow/: main.cpp
src/1.GettingStarted/2.HelloTriangle/: main.cpp  shader.vert
src/1.GettingStarted/2.HelloTriangle/shaders/: shader.frag
src/1.GettingStarted/3.Shaders/: fragment-color-from-vertex.vert  main.cpp
src/1.GettingStarted/3.Shaders/shaders/: fragment-color-from-uniform.frag  fragment-color-from-uniform.vert  fragment-color-from-vertex.frag  fragment-color-interpolation.frag  shader.frag  shader.vert
src/1.GettingStarted/4.Textures/: main.cpp
src/1.GettingStarted/4.Textures/shaders/: shader.frag  shader.vert
src/1.GettingStarted/5.Transformations/: main.cpp
src/1.GettingStarted/5.Transformations/shaders/: shader.frag  shader.vert
src/1.GettingStarted/6.CoordinateSystems/: main.cpp
src/1.GettingStarted/7.Camera/: main.cpp
src/1.GettingStarted/7.Camera/shaders/: shader.frag  shader.vert
src/2.Lighting/1.Colors/: main.cpp
src/2.Lighting/1.Colors/shaders/: cube.frag
src/2.Lighting/2.BasicLighting/: main.cpp
src/2.Lighting/2.BasicLighting/shaders/: cube.frag  cube.vert
src/2.Lighting/3.Materials/: main.cpp
src/2.Lighting/4.LightingMaps/: main.cpp
src/2.Lighting/4.LightingMaps/shaders/: cube.frag
src/2.Lighting/5.LightCasters/: main.cpp
src/2.Lighting/5.LightCasters/shaders/: cube.frag  cube.vert  light.vert
src/2.Lighting/6.MultipleLights/: main.cpp
src/2.Lighting/6.MultipleLights/shaders/: cube.frag  light.frag
src/3.ModelLoading/1.Model/: main.cpp
src/3.ModelLoading/1.Model/shaders/: shader.frag
src/4.AdvancedOpenGL/1.DepthTesting/: main.cpp
src/4.AdvancedOpenGL/1.DepthTesting/shaders/: shader.frag
src/4.AdvancedOpenGL/2.StencilTesting/: main.cpp
src/4.AdvancedOpenGL/2.StencilTesting/shaders/: outline.frag
src/4.AdvancedOpenGL/3.Blending/: main.cpp
src/4.AdvancedOpenGL/3.Blending/shaders/: shader.frag
src/4.AdvancedOpenGL/4.FaceCulling/: main.cpp
src/4.AdvancedOpenGL/5.FrameBuffers/: main.cpp
src/4.AdvancedOpenGL/5.FrameBuffers/shaders/: screen.frag  screen.vert  shader.vert
src/4.AdvancedOpenGL/6.CubeMaps/: main.cpp
